--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CQSCoin</title>
+    <title>Poolsawat.com Test Local Node</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.1/css/bulma.min.css"
@@ -131,7 +131,7 @@
                     <div class="control">
                       <input
                         class="input"
-                        type="text"
+                        type="number"
                         placeholder="Gas Price ex. 100000 wei"
                         v-model="transaction.gasPrice"
                         required
@@ -146,7 +146,7 @@
                     <div class="control">
                       <input
                         class="input"
-                        type="text"
+                        type="number"
                         placeholder="Gas Limit ex. 100000 wei"
                         v-model="transaction.gas"
                         required
